<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activities.MainActivity">
        <!--StatusBar-->
        <LinearLayout
            style="@style/statusBar">

            <RelativeLayout
                style="@style/relativeStatusBar"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/rating_tv"
                    style="@style/statusText"
                    android:text="5"
                    android:textSize="@dimen/font_larger_22"/>

                <TextView
                    style="@style/statusText"
                    android:layout_below="@+id/rating_tv"
                    android:text="@string/rating"
                    android:textSize="@dimen/font_normal_15"/>
            </RelativeLayout>

            <View style="@style/verticalDivider"/>

            <RelativeLayout
                style="@style/relativeStatusBar"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/code_string_tv"
                    style="@style/statusText"
                    android:text="5"
                    android:textSize="@dimen/font_larger_22"/>

                <TextView
                    style="@style/statusText"
                    android:layout_below="@+id/code_string_tv"
                    android:text="@string/code_string_counter_text"
                    android:textSize="@dimen/font_normal_15"/>
            </RelativeLayout>

            <View style="@style/verticalDivider"/>

            <RelativeLayout
                style="@style/relativeStatusBar"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/projects_tv"
                    style="@style/statusText"
                    android:text="5"
                    android:textSize="@dimen/font_larger_22"/>

                <TextView
                    style="@style/statusText"
                    android:layout_below="@+id/projects_tv"
                    android:text="@string/projects"
                    android:textSize="@dimen/font_normal_15"/>
            </RelativeLayout>

        </LinearLayout>

        <!--Mobile phone number-->
        <LinearLayout
            style="@style/main_item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/mobile_phone"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/inner_item">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/editText"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:text="+7(910)111-22-33"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:contentDescription="@string/make_call"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>

        </LinearLayout>

        <View
            style="@style/horizontalDivider"/>

        <!--Email-->
        <LinearLayout
            style="@style/main_item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_mail_black_24dp"/>

            <LinearLayout
                style="@style/inner_item">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/editText"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="test@test.com"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:contentDescription="@string/send_email"
                android:src="@drawable/ic_send_black_24dp"/>

        </LinearLayout>

        <View
            style="@style/horizontalDivider"/>

        <!--VK-->
        <LinearLayout
            style="@style/main_item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/vk"
                android:src="@drawable/ic_vk_circle"/>

            <LinearLayout
                style="@style/inner_item">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/editText"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/vk"
                        android:inputType="textMultiLine"
                        android:text="vk.com/dragon313"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:contentDescription="@string/show_vk_profile"
                android:src="@drawable/ic_remove_red_eye_black_24dp"/>

        </LinearLayout>

        <View
            style="@style/horizontalDivider"/>

        <!--GitHub-->
        <LinearLayout
            style="@style/main_item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/repository"
                android:src="@drawable/ic_github_circle"/>

            <LinearLayout
                style="@style/inner_item">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/github_et"
                        style="@style/editText"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/repository"
                        android:inputType="textMultiLine"
                        android:text="github.com/dragon313/DevIntensive"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:contentDescription="@string/show_repository"
                android:src="@drawable/ic_remove_red_eye_black_24dp"/>

        </LinearLayout>

        <View
            style="@style/horizontalDivider"/>

        <!--About-->
        <LinearLayout
            style="@style/main_item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/about_hint"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                style="@style/inner_item.about">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/editText"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/about_hint"
                        android:inputType="textMultiLine"
                        android:text="@string/about"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
